# pdf_storages

./: README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/routers/: upload.py
app/schemas/: upload.py
app/services/: storage.py
app/utils/: validators.py
tests/: test_upload.py
